@@ -13,6 +13,9 @@ Revision history for {{ $dist->name }}:
 
   - Documented support for older Perl versions.
 
+  [Other]
+  - Added GitHub Actions to run tests.
+
 v0.5.4    2022-09-04 16:02:53+01:00 Europe/London
   [Other]
   - Sign distribution.
